# AAPlus

./: AA+.htm  CMakeLists.txt  README.md
AALib/: CMakeLists.txt
AALib/cmake/: patch_export_files.cmake
AALib/include/: AA+.h  AA2DCoordinate.h  AA3DCoordinate.h  AAAberration.h  AAAngularSeparation.h  AABinaryStar.h  AACoordinateTransformation.h  AADate.h  AADiameters.h  AADynamicalTime.h  AAELP2000.h  AAELPMPP02.h  AAEarth.h  AAEaster.h  AAEclipses.h  AAEclipticalElements.h  AAElementsPlanetaryOrbit.h  AAElliptical.h  AAEquationOfTime.h  AAEquinoxesAndSolstices.h  AAEquinoxesAndSolstices2.h  AAFK5.h  AAGalileanMoons.h  AAGlobe.h  AAIlluminatedFraction.h  AAInterpolate.h  AAJewishCalendar.h  AAJupiter.h  AAKepler.h  AAMars.h  AAMercury.h  AAMoon.h  AAMoonIlluminatedFraction.h  AAMoonMaxDeclinations.h  AAMoonMaxDeclinations2.h  AAMoonNodes.h  AAMoonNodes2.h  AAMoonPerigeeApogee.h  AAMoonPerigeeApogee2.h  AAMoonPhases.h  (+79 more)
AALib/source/: AAAberration.cpp  AAAngularSeparation.cpp  AABinaryStar.cpp  AACoordinateTransformation.cpp  AADate.cpp  AADiameters.cpp  AADynamicalTime.cpp  AAELP2000.cpp  AAEarth.cpp  AAEaster.cpp  AAEclipses.cpp  AAEclipticalElements.cpp  AAElementsPlanetaryOrbit.cpp  AAElliptical.cpp  AAEquationOfTime.cpp  AAEquinoxesAndSolstices.cpp  AAEquinoxesAndSolstices2.cpp  AAFK5.cpp  AAGalileanMoons.cpp  AAGlobe.cpp  AAIlluminatedFraction.cpp  AAInterpolate.cpp  AAJewishCalendar.cpp  AAJupiter.cpp  AAKepler.cpp  AAMars.cpp  AAMercury.cpp  AAMoon.cpp  AAMoonIlluminatedFraction.cpp  AAMoonMaxDeclinations.cpp  AAMoonMaxDeclinations2.cpp  AAMoonNodes.cpp  AAMoonNodes2.cpp  AAMoonPerigeeApogee.cpp  AAMoonPerigeeApogee2.cpp  AAMoonPhases.cpp  AAMoonPhases2.cpp  AAMoslemCalendar.cpp  AANearParabolic.cpp  AANeptune.cpp  (+76 more)
Sample/: AATest.cpp  CMakeLists.txt
